# Panviz

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HANDOFF_20260630_panviz_development.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  render_pantubemap_mainfig.py  run_panviz_mainfig.sh
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_NOTICES.md
config/: defaults.json  example.json  mainfig_baseline.json
docs/: CORE_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  FIGURE_ANATOMY.md  INPUT_FORMAT.md  INSTALL.md
examples/: README.md  generate_toy.py
examples/toy_data/toy_locus/: region.txt  toy_locus_pathcollapsed_SV1kb.gfa  toy_locus_pathcollapsed_SV1kb.path_groups.tsv
harness/: export_exact.js  export_mainfig.js  export_mainfig_natural.js  render_page.html  tubemap_exact_entry.js  webpack.exact.config.js
harness/lib/: postprocess.js
panviz/: __init__.py  cli.py  config.py  discover.py  gfa.py  render.py  validate.py
scripts/: panviz  render_pantubemap_mainfig.py  run_panviz_mainfig.sh
src/: README.md
src/panviz_core/: tubemap.js
tests/: README.md  check_svg_structure.py  test_unit.py
tests/baseline/: 01_FAD2_FAD2_chr08B.expected.json  01_FAD2_FAD2_chr08B.metadata.json  04_KAS_I_II_KAS_I_II_chr03B.expected.json  04_KAS_I_II_KAS_I_II_chr03B.metadata.json  toy_locus.expected.json  toy_locus.metadata.json
