[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panviz"
version = "0.1.0.dev0"
# Install editable from a clone (`pip install -e .`): the renderer reads repo
# assets (config/, harness/, harness/dist/, src/panviz_core/) by path relative to
# the package, so a non-editable wheel would not ship them. Packaging those
# assets for standalone wheels is planned for a later release.
description = "Static, publication-oriented sequence tube map renderer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "qgzeng", email = "qgzeng5426@gmail.com" }]
keywords = ["pangenome", "graph-genome", "GFA", "visualization", "sequence-tube-map"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# The data-conversion / CLI layer is pure standard library. Rendering is
# delegated to the bundled JavaScript core via Node + playwright-core (managed
# under node_modules/, not as a Python dependency).
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/Qgzeng-Bio/Panviz"
Repository = "https://github.com/Qgzeng-Bio/Panviz"

[project.scripts]
panviz = "panviz.cli:main"

[tool.setuptools]
packages = ["panviz"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
